--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-tap-event-plugin",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Facebook's TapEventPlugin, temporarily available on npm until its made public in their repo",
   "main": "src/injectTapEventPlugin.js",
-  "files": ["src/"],
+  "files": [
+    "src/"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +21,9 @@
     "300ms",
     "react-tap-event-plugin"
   ],
+  "dependencies": {
+    "fbjs": ">= 0.2.0"
+  },
   "peerDependencies": {
     "react": "^0.13.3 || ^0.14.0 || 0.14.0-rc1"
   },
